--- a/login.html
+++ b/login.html
@@ -128,10 +128,10 @@
                       
                   </div>
                   <div class="mb-3">
-                    <label class="form-label" for="email">
+                    <label class="form-label" for="Password">
                       كلمة المرور
                     </label>
-                    <input class="form-control" id="email" type="email" name="email" placeholder="" 
+                    <input class="form-control" id="Password" type="Password" name="Password" placeholder="" 
                     required="required"
                     autofocus="autofocus">
                 </div>
