--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
         </div>
       </div>
       <div class="text-center p-3" style="background-color: #170933">
-        <a class="text-white" href="https://mdbootstrap.com/"> جميع الحقوق محفوظه ل نحن لها  © 2022 
-          برمجة وتصميم</a>
-          <a href="https://wecan.jo" style="color:chocolate;" target="_blank">شركة نستطيع We Can </a>
+        <a class="text-white" href="https://mdbootstrap.com/"> 
+          </a>
+          <a href="https://wecan.jo" style="color:chocolate;" target="_blank">  </a>
    
       </div>
     </footer>
