--- a/aboutus.html
+++ b/aboutus.html
@@ -49,10 +49,10 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="">من نحن</a>
+              <a class="nav-link" href="aboutus.html">من نحن</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">الاسعار</a>
+              <a class="nav-link" href="Pricing.html">الاسعار</a>
             </li>
 
             <li class="nav-item">
@@ -65,17 +65,15 @@
               <a class="nav-link" href="">الشروط والاحكام </a>
             </li>
           </ul>
-          <a href="" class="btn-inline my-2 my-lg-0 mr-auto text-center">
+          <a href="Signup.html" class="btn-inline my-2 my-lg-0 mr-auto text-center">
             <span class="btn1" type="submit">سجل الان</span>
           </a>
-          <a href="" class="btn-inline my-2 my-lg-0 mr-0 mr-md-3 text-center">
+          <a href="login.html" class="btn-inline my-2 my-lg-0 mr-0 mr-md-3 text-center">
             <span class="btn2" type="submit">دخول</span>
           </a>
         </div>
       </div>
     </nav>
-
-
         <div class="aboutus border-top">
           <div class="row mr-5">
             <div class="col-sm-8 ">
@@ -107,17 +105,6 @@
           </div>
       
         </div>
-
-
-
-
-
-
-
-
-
-
-
 
     <footer class="foot text-center text-white">
         <div class="container pt-3">
@@ -218,44 +205,15 @@
             <div></div>
           </div>
         </div>
-        <div class="text-center p-3" style="background-color: #170933">
-          <a class="text-white" href="https://mdbootstrap.com/"> جميع الحقوق محفوظه ل نحن لها  © 2022 
-            برمجة وتصميم</a>
-            <a href="https://wecan.jo" style="color:chocolate;" target="_blank">شركة نستطيع We Can </a>
-     
-        </div>
       </footer>
   
       <!-- jquery -->
       <script src="./js/jquery.min.js"></script>
   
-      <!-- slick js -->
-      <script src="./js/slick.min.js"></script>
-  
       <!-- bootstrap js -->
       <script src="./js/bootstrap.min.js"></script>
   
-      <!-- main js -->
-      <script src="./js/main.js"></script>
-  
-      <!-- adding slick -->
-      <script type="text/javascript">
-        $(".reviewSlider").slick({
-          slidesToShow: 3,
-          slideToScroll: 1,
-          adaptiveHeight: false,
-          infinite: true,
-          responsive: [
-            {
-              breakpoint: 710,
-              settings: {
-                slidesToShow: 1,
-                slidesToScroll: 1,
-              },
-            },
-          ],
-        });
-      </script>
+   
   
       <!-- change header background after scroll-->
       <script>
